--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     /**
      * RecyclerView功能集封装
      */
-    compile 'com.github.AcmenXD:RecyclerView:1.0'
+    //compile 'com.github.AcmenXD:RecyclerView:1.0'
+    compile project(':recyclerview')
 }
