支持多层级分组 + 悬浮分组头, 并优化了Item的各种事件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     /**
      * RecyclerView功能集封装
      */
-    compile 'com.github.AcmenXD:RecyclerView:1.3'
-    //compile project(':recyclerview')
+//    compile 'com.github.AcmenXD:RecyclerView:1.3'
+    compile project(':recyclerview')
 }
