整体优化,bug修复

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,15 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# Intellij
+# IntelliJ
 *.iml
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
 .idea/.name
 .idea/encodings.xml
 .idea/inspectionProfiles/Project_Default.xml
@@ -42,9 +49,30 @@ captures/
 .idea/modules.xml
 .idea/scopes/scope_settings.xml
 .idea/vcs.xml
-.idea/workspace.xml
-.idea/libraries
 .idea/*
 
 # Keystore files
-*.jks
+# Uncomment the following line if you do not want to check your keystore files in.
+#*.jks
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Freeline
+freeline.py
+freeline/
+freeline_project_description.json
+
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+fastlane/readme.md
+test_demo/src/main/java/com/acmenxd/test_demo/model/
+testbase/libs/
+testbase/src/main/java/com/acmenxd/testbase/model/request/
+testbase/src/main/jniLibs/
