整体优化,bug修复

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,6 @@ android {
 }
 
 dependencies {
-    /**
-     * RecyclerView功能集封装
-     */
-//    compile 'com.github.AcmenXD:RecyclerView:3.0'
-    compile project(':recyclerview')
+    compile config.recyclerview
+//    compile project(':recyclerview')
 }
