优化 事件监听 逻辑

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ android {
 }
 
 dependencies {
-    compile config.recyclerview
-//    compile project(':recyclerview')
+//    compile config.recyclerview
+    compile project(':recyclerview')
 }
